--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>3826</title>
-  <script defer src="/dist/main.bundle.js"></script><link href="/dist/styles.css" rel="stylesheet"></head>
+  <script defer src="main.bundle.js"></script><link href="styles.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
   </body>
