--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="/favicon.png"
+      href="/public/favicon.png"
     />
     <meta charset="UTF-8" />
     <meta
