--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link
       rel="icon"
       type="image/png"
-      href="/public/favicon.png"
+      href="/favicon.png"
     />
     <meta charset="UTF-8" />
     <meta
@@ -16,7 +16,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>3826</title>
-  <script defer src="main.bundle.js"></script><link href="styles.css" rel="stylesheet"></head>
+  <link rel="icon" href="favicon.png"><script defer src="main.bundle.js"></script><link href="styles.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
   </body>
