--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>3826</title>
+    <title>Предприятие 3826</title>
   <link rel="icon" href="favicon.png"><script defer src="main.bundle.js"></script><link href="styles.css" rel="stylesheet"></head>
   <body>
     <div id="app"></div>
