--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>3826</title>
+    <title>Предприятие 3826</title>
   </head>
   <body>
     <div id="app"></div>
